# crypto-candlesticks-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit-check.yml  rust.yml  tests.yml  ubuntu-tests.yml  windows-test.yml
examples/: BTCUSD-1D-2021-04-14 15-07-48.xlsx  BTCUSD-1D.sqlite
src/: database.rs  get_data.rs  main.rs  text_console.rs
src/bitfinex/: connector.rs  mod.rs
src/exchanges/: bitfinex.rs  mod.rs
src/symbols/: intervals.rs  list_of_currency.rs  mod.rs
test/: test_config.rs  test_main.rs  test_symbols.rs
