[[bin]]
name = "crypto-candlesticks-rust"

[[test]]
name = "crypto-candlesticks-rust-test"
path = "./test/test_config.rs"

[package]
name = "crypto-candlesticks-rust"
version = "0.1.2"
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Download candlestick data fast & easy for analysis"
documentation = "https://docs.rs/crate/crypto-candlesticks-rust/"
repository = "https://github.com/Corfucinas/crypto-candlesticks-rust"
readme = "README.md"
keywords = ["cryptocurrency", "candlesticks", "download", "data", "ohlc"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
exclude = [
    "examples/",
    "hex/",
    "media/crypto-candlestick-rust.mp4",
    "media/crypto-candlestick-rust.png",
    "scripts/",
    ".github",
]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.4"
colorful = "0.2.1"
comfy-table = "4.1.1"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
rusqlite = { version = "0.25.3", features = ["bundled"] }
serde = { version = "1.0.127", features = ["derive"] }
simple_excel_writer = "0.1.7"
