[[bin]]
name = "crypto-candlesticks-rust"

[[test]]
name = "crypto-candlesticks-rust-test"
path = "./test/test_config.rs"

[package]
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
description = "Download candlestick data fast & easy for analysis"
documentation = "https://docs.rs/crate/crypto-candlesticks-rust/"
edition = "2021"
exclude = [
  "examples/",
  "hex/",
  "media/crypto-candlestick-rust.mp4",
  "media/crypto-candlestick-rust.png",
  "scripts/",
  ".github",
]
keywords = ["cryptocurrency", "candlesticks", "download", "data", "ohlc"]
license = "GPL-3.0-or-later"
name = "crypto-candlesticks-rust"
readme = "README.md"
repository = "https://github.com/Corfucinas/crypto-candlesticks-rust"
version = "0.1.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size.
panic = "abort"
strip = "symbols"

[dependencies]
chrono = "0.4.19"
clap = {version = "4.0.19", features = ["env"]}
colorful = "0.2.1"
comfy-table = "6.0.0"
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
rusqlite = {version = "0.27.0", features = ["bundled"]}
serde = {version = "1.0.133", features = ["derive"]}
simple_excel_writer = "0.2.0"
